--- a/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/Project_1B_ Project_Template.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/Project_1B_ Project_Template.ipynb
@@ -2,29 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "# Part I. ETL Pipeline for Pre-Processing the Files"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Import Python packages "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Import Python packages \n",
@@ -40,16 +48,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Creating list of filepaths to process original event csv data files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/workspace\n"
+     ]
+    }
+   ],
    "source": [
     "# checking your current working directory\n",
     "print(os.getcwd())\n",
@@ -67,15 +87,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Processing the files to create the data file csv that will be used for Apache Casssandra tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# initiating an empty list of rows that will be generated from each file\n",
@@ -116,9 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6821\n"
+     ]
+    }
+   ],
    "source": [
     "# check the number of rows in your csv file\n",
     "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
@@ -127,7 +161,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
@@ -151,108 +187,326 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "## Begin writing your Apache Cassandra code in the cells below"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Creating a Cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# This should make a connection to a Cassandra instance your local machine \n",
-    "# (127.0.0.1)\n",
-    "\n",
     "from cassandra.cluster import Cluster\n",
-    "cluster = Cluster()\n",
     "\n",
-    "# To establish connection and begin executing queries, need a session\n",
-    "session = cluster.connect()"
+    "try:\n",
+    "    \n",
+    "    cluster = Cluster(['127.0.0.1'])\n",
+    "    # To establish connection and begin executing queries, need a session\n",
+    "    session = cluster.connect()\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Create Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace "
+    "# Create Keyspace\n",
+    "try:\n",
+    "    session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS sparkifydb\n",
+    "    WITH REPLICATION = \n",
+    "    { 'class': 'SimpleStrategy', 'replication_factor': 1 }\n",
+    "    \"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Set Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n"
+    "# Set Keyspace\n",
+    "try:\n",
+    "    session.set_keyspace('sparkifydb')\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "## Create queries to ask the following three questions of the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "\n",
-    "\n",
-    "                    "
+    "session_item_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS session_item\n",
+    "(session_id INT, session_item_id INT, artist_name VARCHAR, song_title VARCHAR, song_length DOUBLE,\n",
+    "PRIMARY KEY (session_id, session_item_id))\n",
+    "\"\"\"\n",
+    "try:\n",
+    "    session.execute(session_item_query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": false
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "    ## Assign the INSERT statements into the `query` variable\n",
+    "        query = \"INSERT INTO session_item (session_id, session_item_id, artist_name, song_title, song_length)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
+    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 338 | 4 | Faithless | Music Matters (Mark Knight Dub) | 495.3073 | \n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    results = session.execute(\"\"\"\n",
+    "    SELECT * FROM session_item\n",
+    "    WHERE session_id=338 AND session_item_id=4\n",
+    "    \"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    " \n",
+    "for row in results:\n",
+    "    print('| {} | {} | {} | {} | {} | '.format(row.session_id, row.session_item_id, row.artist_name, row.song_title, row.song_length))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "user_session_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS user_session\n",
+    "(user_id INT, session_id INT, session_item_id INT, artist_name VARCHAR, first_name VARCHAR, last_name VARCHAR, song_title VARCHAR,\n",
+    "PRIMARY KEY (user_id, session_id, session_item_id))\n",
+    "\"\"\"\n",
+    "try:\n",
+    "    session.execute(user_session_query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "    ## Assign the INSERT statements into the `query` variable\n",
+    "        query = \"INSERT INTO user_session (user_id, session_id, session_item_id, artist_name, first_name, last_name, song_title)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        ## Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[1], line[4], line[9]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 10 | 182 | 0 | Down To The Bone | Sylvie | Cruz | Keep On Keepin' On |\n",
+      "| 10 | 182 | 1 | Three Drives | Sylvie | Cruz | Greece 2000 |\n",
+      "| 10 | 182 | 2 | Sebastien Tellier | Sylvie | Cruz | Kilometer |\n",
+      "| 10 | 182 | 3 | Lonnie Gordon | Sylvie | Cruz | Catch You Baby (Steve Pitron & Max Sanna Radio Edit) |\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    results = session.execute(\"\"\"\n",
+    "    SELECT * FROM user_session\n",
+    "    WHERE user_id=10 AND session_id=182\n",
+    "    \"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    " \n",
+    "for row in results:\n",
+    "    print('| {} | {} | {} | {} | {} | {} | {} |'.format(row.user_id , row.session_id, row.session_item_id, row.artist_name, \n",
+    "                                                        row.first_name, row.last_name, row.song_title))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "song_user_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS song_user\n",
+    "(song_title VARCHAR, first_name VARCHAR, last_name VARCHAR,\n",
+    "PRIMARY KEY (song_title))\n",
+    "\"\"\"\n",
+    "try:\n",
+    "    session.execute(song_user_query)\n",
+    "except Exception as e:\n",
+    "    print(e)                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -264,111 +518,120 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
+    "        query = \"INSERT INTO song_user (song_title, first_name, last_name)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "        session.execute(query, (line[9], line[1], line[4]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
+    "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| All Hands Against His Own | Sara | Johnson |\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "try:\n",
+    "    results = session.execute(\"\"\"\n",
+    "    SELECT * FROM song_user\n",
+    "    WHERE song_title='All Hands Against His Own'\n",
+    "    \"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    " \n",
+    "for row in results:\n",
+    "    print('| {} | {} | {} |'.format(row.song_title, row.first_name, row.last_name))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
-    "\n",
-    "\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Drop the tables before closing out the sessions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "# DROP session_item table\n",
+    "try:\n",
+    "    session.execute(\"\"\"DROP TABLE IF EXISTS session_item\"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# DROP user_session table\n",
+    "try:\n",
+    "    session.execute(\"\"\"DROP TABLE IF EXISTS user_session\"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# DROP s_item table\n",
+    "try:\n",
+    "    session.execute(\"\"\"DROP TABLE IF EXISTS song_user\"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Close the session and cluster connection¶"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "session.shutdown()\n",
@@ -378,14 +641,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -410,5 +677,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
